# GitHub-cmake-tests

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: test.cpp
